<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>powsybl-parent</artifactId>
        <groupId>com.powsybl</groupId>
        <version>17</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>powsybl-metrix</artifactId>
    <packaging>pom</packaging>
    <version>2.1.0-SNAPSHOT</version>

    <name>powsybl metrix</name>
    <description>Multisituation loadflow and optimization module for powsybl</description>
    <url>https://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-metrix.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-metrix.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-metrix</url>
    </scm>

    <modules>
        <module>metrix-distribution</module>
        <module>metrix-integration</module>
        <module>metrix-mapping</module>
        <module>metrix-tools</module>
    </modules>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Paul BUI-QUANG</name>
            <email>paul.buiquang@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>17</java.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../metrix-tools/target/site/jacoco-aggregate/jacoco.xml,
            ../../metrix-tools/target/site/jacoco-aggregate/jacoco.xml,
            ../../../metrix-tools/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>

        <assertj.version>3.24.2</assertj.version>
        <autoservice.version>1.1.1</autoservice.version>
        <commonscli.version>1.5.0</commonscli.version>
        <!-- groovy.version : Same as powsybl-core -->
        <groovy.version>4.0.14</groovy.version>
        <guava.version>32.1.2-jre</guava.version>
        <jimfs.version>1.3.0</jimfs.version>
        <junit-jupiter.version>5.10.0</junit-jupiter.version>
        <log4joslf4j.version>1.7.32</log4joslf4j.version>
        <logback.version>1.4.14</logback.version>
        <mockito.version>5.5.0</mockito.version>
        <slf4j.version>2.0.9</slf4j.version>

        <powsyblcore.version>6.1.1</powsyblcore.version>

        <!-- Parameters used to generate the javadoc for groovy and java classes.
             See the pom file in powsybl-parent for more explanations. -->
        <groovydoc.classifier>javadoc</groovydoc.classifier>
        <groovydoc.groovyDocJavaSources>true</groovydoc.groovyDocJavaSources>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <!-- This part was added in order to generate javadoc and groovydoc and deploy it.
                          It was necessary to copy it from powsybl-parent since the line "<attach>true</attach>"
                           has no parameter to configure it yet. It might be interesting to add a parameter  for
                           this in powsybl-parent -->
                        <groupId>org.codehaus.gmavenplus</groupId>
                        <artifactId>gmavenplus-plugin</artifactId>
                        <version>${maven.gmavenplus.version}</version>
                        <executions>
                            <execution>
                                <id>groovydoc-jar</id>
                                <goals>
                                    <goal>groovydoc-jar</goal>
                                </goals>
                                <configuration>
                                    <attach>true</attach>
                                    <includeClasspath>PROJECT_AND_PLUGIN</includeClasspath>
                                    <classifier>${groovydoc.classifier}</classifier>
                                    <groovyDocJavaSources>${groovydoc.groovyDocJavaSources}</groovyDocJavaSources>
                                </configuration>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>org.apache.groovy</groupId>
                                <artifactId>groovy-groovydoc</artifactId>
                                <version>${maven.groovydoc.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commonscli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>${autoservice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.jimfs</groupId>
                <artifactId>jimfs</artifactId>
                <version>${jimfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-commons-test</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-computation-local</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-config-classic</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-config-test</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-contingency-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-contingency-dsl</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-extensions</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-impl</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-scripting</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-serde</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-time-series-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-time-series-dsl</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-tools</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
